--- a/app/src/main/res/menu/fragment_map_list.xml
+++ b/app/src/main/res/menu/fragment_map_list.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/menu_item_toggle_location_service"
+        android:title="@string/start_location_service"
+        app:showAsAction="ifRoom|withText"/>
 </menu>
