--- a/app/src/main/res/layout/fragment_reminder_list.xml
+++ b/app/src/main/res/layout/fragment_reminder_list.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/app_name"
+        android:text="@string/map_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
