--- a/app/src/main/res/layout/list_item_map.xml
+++ b/app/src/main/res/layout/list_item_map.xml
@@ -30,14 +30,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
+
     <TextView
-        android:id="@+id/text_lat"
-        android:layout_width="0dp"
+        android:id="@+id/text_radius"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/map_title" />
+
+    <TextView
+        android:id="@+id/text_lat"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="5dp"
+        android:text="TextView"
+        app:layout_constraintStart_toEndOf="@id/text_radius"
         app:layout_constraintTop_toBottomOf="@+id/map_title" />
 
     <TextView
