--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -33,35 +33,15 @@
 
     <EditText
         android:id="@+id/reminder_radius"
+        android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/reminder_radius_hint" />
-
-
-    <Switch
-        android:id="@+id/reminder_toggle"
-        style="?android:listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/reminder_switch_text" />
-
-    <Button
-        android:id="@+id/reminder_button_map"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/reminder_map_button" />
-
-    <Button
-        android:id="@+id/reminder_button_save"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/reminder_save_button" />
 
     <Button
         android:id="@+id/reminder_button_delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/reminder_delete_button" />
-
 
 </LinearLayout>
